---
source: src/macros.rs
expression: map
---
CausalDotStore {
    store: {
        "field_x": v(
            ${(@1.1, 2): "Hello"},
        ),
        "field_y": v(
            ${(@1.1, 3): "World"},
        ),
        "field_z": v(
            {
                "field_x": v(
                    ${(@1.1, 4): "Nested"},
                ),
                "field_y": v(
                    ${(@1.1, 5): "Nested"},
                ),
            },
        ),
    },
    context: CausalContext(
        {
            @1.1: {
                2..=5,
            },
        },
    ),
}
